app/assets/stylesheets/wsu-responsive.css
/* small devices (tablets) only */
@media (min-width: 768px) and (max-width: 991px) {
  /*body {border:3px solid red !important;}*/

/* CI STYLES ************ START */

#topPurple {
  height: 660px;  /*to prevent jump -- roundabout still jumps' */
}

.myContent-inner {
  width:640px;
  margin-left:38px;
}

.myContent-inner h1 {
  margin-top:-2em !important;
}

.c1 img, .c2 img, .c3 img, .c4 img {
  padding-top:25px !important;
  padding-left:53px !important;
}

#horz-roundabout {
  position:absolute;top:210px;left:50% !important;
}

#horz-roundabout #myRoundabout li {
  width:102px !important;
}

#horz-roundabout #next {
  position:absolute !important;
  z-index: 10000 !important;
  top:41px !important;
  right: -62px !important;
  display:block !important;
}

#horz-roundabout #previous {
  position:absolute !important;
  z-index: 10000 !important;
  top:40px !important;
  left: -70px !important;
  display:block !important;
} 

#mid-nav {
  background-image:none !important;
}

#mid-nav ul {
  margin-left:73px !important;
  font-size:10px !important;
}

#mid-nav .nav .navbar-nav {
  background-color:blue !important;
  border:1px solid red;
}

#mid-nav .navbar-default .navbar-nav > li > a {
  font-size:10px !important;
  padding:0 20px;
  color:red !important;
}

.buckets button {
  bottom:14px !important;
}

/* CI STYLES ************ END */




.navbar-default .navbar-nav > li > a {
  font-size: 14px;
  font-weight: bold;
  color: #FFFFFF;
  padding: 10px 20px;
}
ul.bs-docs-sidenav  {
  padding-bottom:20px;
  background-color:#f2f0ed;
}
.colright  {
  padding-top:20px;
}
#wsu-footer #sm4 p{
  display:inline-block;
  padding-right:22px;
  padding-top:10px;
  padding-bottom:10px;
  }
}

/* Medium devices (desktops, 992px and under) */
@media (max-width: 991px) {
.wsu-colleft {
  margin-right: 0%;
  width: 100%
}
.wsu-colright {
  margin-left: 0%;
  width: 100%
  }
}

/* Small devices (tablets, 768px and under) */
@media (max-width: 767px) {
/*body {border:5px solid yellow !important;}*/
h1 {
  margin-top: 3px;
}

/* CI STYLES ************ START */

#topPurple {
  max-height: 530px; /* to prevent jump -- roundabout still jumps' */
}

.myContent-inner h1 {
  margin-top:0em !important;
  padding-top:10px !important;
}

.buckets button {
  bottom:14px !important;
}

.nav-tabs {font-size:10px;}
.nav-tabs li a {padding-left:6px !important;padding-right:6px !important;}
.nav-tabs li {
  float:left;
}

.c1 img, .c2 img, .c3 img, .c4 img {
  /*padding-top:25px !important;*/
  /*padding-left:45px !important;*/
  width:100%;
}

#horz-roundabout {
  position:absolute;top:210px;left:20% !important;
}

#horz-roundabout #myRoundabout li {
  width:102px !important;
}

#horz-roundabout #next {
  position:absolute !important;
  z-index: 10000 !important;
  top:41px !important;
  right: -49px !important;
  display:block !important;
}

#horz-roundabout #previous {
  position:absolute !important;
  z-index: 10000 !important;
  top:40px !important;
  left: -53px !important;
  display:block !important;
} 

#lower-wrapper {
  padding-top:20px;
  margin-top:10px;
}

.navbar-header button {
  margin-top:2px;
}




/* CI STYLES ************ END */

#wsu-footer br {
  display: none;
}
#wsu-footer h3 {
  margin-bottom: 0px;
}
#wsu-footer h3 a {
  font: bold 18px/24px arial, hevetica;
  color: #481e9e;
  margin-top: 0px;
}
#wsu-footer p {
  font-size: 13px;
  line-height: 22px;
}
#wsu-footer p a {
  text-decoration: underline;
  color: #6B6866;
  padding-right: 7px;
}

#wsu-footer {

}
#wsu-footer-global {
  /*margin: 15px 15px;*/
}
.smicon {
  margin: 20px 15px 0px 0px;
  font-size: 20px;
  float: left;
}
.smlink {
  display: none;
}
.navbar-default {
  min-height: 0px;
}
.navbar {
  position: static;
}
.navbar .divider-vertical {
  display: none;
}
.navbar .nav {
  margin: 0px;
}
.navbar .nav > li a {
  border-bottom: 1px solid #553092;
  padding: 12px 19px;
}
.dropdown-menu {
  margin: 0px;
  padding: 0px 0px 0px 0px;
}
.navbar-default .navbar-nav .open .dropdown-menu > li > a {
  padding: 10px 15px 10px 38px;
  color: #fff;
}
.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover {
  color: #fff;
}
.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
  border-color: #553092;
}
.col-md-12 {
  position: static;
}
.col-md-6 {
  margin: 10px 15px 15px 15px;
  margin: 10px 5px 15px 5px;
}
.wsu-colleft {
  margin-right: 0%;
  width: 70%
}
.wsu-colright {
  width: auto;
}
.wsu-img-home {
  width: 150px;
  margin: 5px;
}
.btn-primary {
  color: #ffffff;
  background-color: #5324a2;
  border-color: #5324a2;/*padding-bottom:2px;*/
}
.btn-primary:focus {
  color: #ffffff;
  background-color: #5324a2;
  border-color: #5324a2;
}
#nav-slide {
/*left:-16px;
top:0px;
position:absolute;
border-bottom-left-radius: 0px;
border-top-left-radius: 0px;
padding-left:2px;*/
}
#search {
  background-color: #fff;
  padding-left: 10px;
  padding-right: 10px;
}
#search .navbar-form {
  border: none;
  margin-bottom: 0px;
}
#sm4 {
  display: none;
}
#wsu-footer-global .col-md-2 {
  margin-bottom: 10px;
}
.img-responsive {
  /*ie fix*/
  clear:left;
}
}


/* Extra small devices (phones, up to 480px) */
/* No media query since this is the default in Bootstrap */

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {

#wsu-resources {
  display: none !important;
}

/* CI STYLES ************ START */

/*body {border:1px solid red;}*/

#mid-nav ul {
  margin-right:0;
}

#mid-nav .navbar-nav > li > a {
padding:10px 10px !important;
font-weight:100;
}

#mid-nav .navbar-text {
  margin-right:5px !important;
  padding-left:0;
}

#lower-wrapper {
  padding-top:40px;
}

/* CI STYLES ************ END */

#search {
  display: none !important;
}
ul.navbar-nav {
float:none;
display:table;
margin:0px auto;
}
.navbar-default .navbar-nav > li > a {
padding:10px 18px;
text-align: center;
}
.wsu-resources {
  float:right;
  padding-right: 20px;
}
.search {
  float:right;padding-right: 20px;padding-top:10px;
}
.wsu-container-footer {
  padding-left:20px;
}
.wsu-container-footer-global {
  padding-left:10px;
}
}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {

/* CI STYLES ************ START */

  body {border:5px solid pink;}

#horz-roundabout {
  position:absolute;top:230px;left:13%;
}

#horz-roundabout #myRoundabout li {
  width:90px !important;
}

#horz-roundabout #next {
  position:absolute !important;
  z-index: 10000 !important;
  top:35px !important;
  right: 84px !important;
  display:block !important;
}

#horz-roundabout #previous {
  position:absolute !important;
  z-index: 10000 !important;
  top:35px !important;
  left:-50px !important;
  display:block !important;
} 

.roundabout-in-focus {
  width:90px;
}

.myContent-inner {
  margin-left:-20px;

}

.c1 img, .c2 img, .c3 img, .c4 img {
  padding-top:25px !important;
  padding-left:20px !important;

}

.myContent-inner h1 {
  padding-top:1em !important;
}

#lower-wrapper {
  padding-top:40px;
}

#mid-nav ul {
  margin-left:220px !important;
}

#mid-nav .navbar-nav > li > a {
padding:10px 20px !important;
/*border:1px solid red;*/
}

/* CI STYLES ************ END */

.navbar-default .navbar-nav > li > a {
padding:10px 40px;
}

.wsu-resources {
  float:left;padding-right: 20px;
}
.search {
  padding-right: 20px;padding-top:0px;
}
.wsu-facts {  background-color: #f2f0ed;}
.wsu-container-footer {
  padding-left:30px;
}
.wsu-container-footer-global {
  padding-left:30px;
}
}

/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

/* CI STYLES ************ START */

  /*body {border:1px solid purple;}*/

#horz-roundabout {
  position:absolute;top:230px;left:17% !important;
}

#horz-roundabout #myRoundabout li {
  width:102px !important;

}

#horz-roundabout #next {
  position:absolute !important;
  z-index: 10000 !important;
  top:41px !important;
  right: 150px !important;
  display:block !important;
}

#horz-roundabout #previous {
  position:absolute !important;
  z-index: 10000 !important;
  top:40px !important;
  left: -70px !important;
  display:block !important;
} 

.myContent-inner {
  margin-left:-50px;
}

.myContent-inner h1 {
  margin-top:1.15em !important;
}

.c1 img, .c2 img, .c3 img, .c4 img {
  padding-top:0px !important;
  padding-left:0px !important;

}

.navbar-default .navbar-nav > li > a {
padding:10px 60px;
}

#mid-nav .navbar-nav > li > a {
padding:10px 40px !important;
/*border:1px solid green;*/
}

#lower-wrapper {
  padding-top:20px;
}

/* CI STYLES ************ END */

.wsu-container-footer {
  padding-left:40px;
}
.wsu-container-footer-global {
  padding-left:40px;
}
    .search {
        float:left;
    }
}

@media only screen and (width:768px) {
body {font-size: 16px;line-height: 1.628571429;}

.glyphicon-leftnav {
top: 16px;
}


.dropdown-menu > li > a, .dropdown-menu > li > a:hover,  .dropdown-menu > li > a:focus {
padding: 9px 20px;
}

.wsu-facts p{
font-size: 15px;
}

.col-md-3 .nav li a.label_lr {
font-size: 18px;
}

.wsu-std-facts {
font-size: 17px;
}
.navbar-default .navbar-nav > li > a {
font-size: 16px;
padding:10px 11px;
}
.breadcrumb {
font-size: 14px;
line-height: 1.428571429; 
}
}
@media only screen and (width:1024px) {
body {font-size: 16px; line-height: 1.628571429;}

.glyphicon-leftnav {
top: 16px;
}


.dropdown-menu > li > a, .dropdown-menu > li > a:hover,  .dropdown-menu > li > a:focus {
padding: 10px 20px;
}

.wsu-facts p{
font-size: 15px;
}

.col-md-3 .nav li a.label_lr {
font-size: 18px;
}

.wsu-std-facts {
font-size: 17px;
}
.navbar-default .navbar-nav > li > a {
font-size: 16px;
padding:10px 31px;
}
.breadcrumb {
font-size: 14px;
line-height: 1.428571429; 
}

}

